--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,3 +9,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: sample checkout step
       run: echo "this is my first workflow"
+
+    - name: stimulate error
+      run: echo "error "; exit 1
+     
+    
